--- a/KV-LSM-Tree/pom.xml
+++ b/KV-LSM-Tree/pom.xml
@@ -6,11 +6,11 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <maven.compiler.source>1.8</maven.compiler.source>
   </properties>
-  <groupId>com.yuxin</groupId>
+  <groupId>com.summer</groupId>
   <artifactId>kvstore</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>kvstore</name>
-  <description>KVStoreLSMtree</description>
+  <description>KvsStore</description>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
